Change structure of screen reader text to read content naturally

--- a/lang/en.json
+++ b/lang/en.json
@@ -26,7 +26,7 @@
     "noSearchResults": "No results found for \"{searchTerm}\"",
     "a11yCollapsed": "collapsed",
     "a11yExpanded": "expanded",
-    "nodeAriaText": "Level {level}, group {state}, {content}, {position} of {count}.",
-    "nodeAriaTextLeaf": "Level {level}, {content}, {position} of {count}.",
-    "nodeLoadingAriaText": "Level {level}, loading, {position} of {count}."
+    "nodeAriaTextLevel": "Level {level}",
+    "nodeAriaTextGroup": "Group {state}",
+    "nodeAriaTextPosition": "{position} of {count}"
 }
