--- a/lang/nl.json
+++ b/lang/nl.json
@@ -10,9 +10,9 @@
     "headingLoa": "Niveau van de resultaten",
     "miniTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Poging} other {Pogingen}} {attemptNames}",
     "miniTrendScreenReaderText": "Beoordeeld {numAssessed} {numAssessed, plural, =1 {time} other {times}}: {levelNames}",
-    "nodeAriaText": "Level {level}, group {state}, {content}, {position} of {count}.",
-    "nodeAriaTextLeaf": "Level {level}, {content}, {position} of {count}.",
-    "nodeLoadingAriaText": "Level {level}, loading, {position} of {count}.",
+    "nodeAriaTextGroup": "Group {state}",
+    "nodeAriaTextLevel": "Level {level}",
+    "nodeAriaTextPosition": "{position} of {count}",
     "noEvidence": "Deze {outcome, select, competencies {Competenties} expectations {Verwachtingen} objectives {Doelstellingen} outcomes {Resultaten} standards {Standaarden} other {Standaarden}} zijn nog niet beoordeeld",
     "noOutcomesInstructor": "Om te beginnen met het volgen van de resultaten van {outcome, select, competencies {Competenties} expectations {Verwachtingen} objectives {Doelstellingen} outcomes {Resultaten} standards {Standaarden} other {Standaarden}}, pas {outcome, select, competencies {Competenties} expectations {Verwachtingen} objectives {Doelstellingen} outcomes {Resultaten} standards {Standaarden} other {Standaarden}} van cursus aan de beoordeelde activiteiten aan.",
     "noOutcomesStudent": "Geen {outcome, select, competencies {Competenties} expectations {Verwachtingen} objectives {Doelstellingen} outcomes {Resultaten} standards {Standaarden} other {Standaarden}} zijn geëvalueerd.",
@@ -20,10 +20,10 @@
     "noScaleStudent": "Er is geen schaal ingesteld om de resultaten van {outcome, select, competencies {Competenties} expectations {Verwachtingen} objectives {Doelstellingen} outcomes {Resultaten} standards {Standaarden} other {Standaarden}} te meten.",
     "noSearchResults": "No results found for \"{searchTerm}\"",
     "notAssessed": "Niet geëvalueerd",
+    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "outcomesListDescription": "{outcome, select, competencies {Competencies} expectations {Expectations} objectives {Objectives} outcomes {Outcomes} standards {Standards} other {Standards}} List",
     "outcomesListLoading": "Loading",
     "outcomesListLoadingComplete": "Loading complete",
-    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "searchCleared": "Search results cleared",
     "searchHint": "Search...",
     "searchLabel": "Search",
