--- a/lang/de.json
+++ b/lang/de.json
@@ -10,9 +10,9 @@
     "headingLoa": "Erreichte Stufe",
     "miniTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Versuch} other {Versuche}} {attemptNames}",
     "miniTrendScreenReaderText": "{numAssessed} {numAssessed, plural, =1 {Mal} other {Mal}} bewertet: {levelNames}",
-    "nodeAriaText": "Level {level}, group {state}, {content}, {position} of {count}.",
-    "nodeAriaTextLeaf": "Level {level}, {content}, {position} of {count}.",
-    "nodeLoadingAriaText": "Level {level}, loading, {position} of {count}.",
+    "nodeAriaTextGroup": "Group {state}",
+    "nodeAriaTextLevel": "Level {level}",
+    "nodeAriaTextPosition": "{position} of {count}",
     "noEvidence": "{outcome, select, competencies {Diese Kompetenz} expectations {Diese Erwartung} objectives {Dieses Ziel} outcomes {Dieses Ergebnis} standards {Dieser Standard} other {Dieser Standard}} wurde noch nicht bewertet",
     "noOutcomesInstructor": "Um mit dem Nachverfolgen des Erreichens von {outcome, select, competencies {Kompetenzen} expectations {Erwartungen} objectives {Zielen} outcomes {Ergebnissen} standards {Standards} other {Standards}} zu beginnen, müssen Sie {outcome, select, competencies {die Kompetenzen} expectations {die Erwartungen} objectives {die Ziele} outcomes {die Ergebnisse} standards {die Standards} other {die Standards}} des Kurses bewerteten Aktivitäten zuweisen.",
     "noOutcomesStudent": "Es wurden keine {outcome, select, competencies {Kompetenzen} expectations {Erwartungen} objectives {Ziele} outcomes {Ergebnisse} standards {Standards} other {Standards}} bewertet.",
@@ -20,10 +20,10 @@
     "noScaleStudent": "Es wurde keine Skala festgelegt, um das Erreichen von {outcome, select, competencies {Kompetenzen} expectations {Erwartungen} objectives {Zielen} outcomes {Ergebnissen} standards {Standards} other {Standards}} zu messen.",
     "noSearchResults": "No results found for \"{searchTerm}\"",
     "notAssessed": "Nicht bewertet",
+    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "outcomesListDescription": "{outcome, select, competencies {Competencies} expectations {Expectations} objectives {Objectives} outcomes {Outcomes} standards {Standards} other {Standards}} List",
     "outcomesListLoading": "Loading",
     "outcomesListLoadingComplete": "Loading complete",
-    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "searchCleared": "Search results cleared",
     "searchHint": "Search...",
     "searchLabel": "Search",
