--- a/lang/es.json
+++ b/lang/es.json
@@ -10,9 +10,9 @@
     "headingLoa": "Nivel de logro",
     "miniTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Intento} other {Intentos}} {attemptNames}",
     "miniTrendScreenReaderText": "Se evaluó {numAssessed} {numAssessed, plural, =1 {hora} other {horas}}: {levelNames}",
-    "nodeAriaText": "Level {level}, group {state}, {content}, {position} of {count}.",
-    "nodeAriaTextLeaf": "Level {level}, {content}, {position} of {count}.",
-    "nodeLoadingAriaText": "Level {level}, loading, {position} of {count}.",
+    "nodeAriaTextGroup": "Group {state}",
+    "nodeAriaTextLevel": "Level {level}",
+    "nodeAriaTextPosition": "{position} of {count}",
     "noEvidence": "Este {outcome, select, competencies {competencia} expectations {expectativa} objectives {objetivo} outcomes {resultado} standards {estándar} other {estándar}} aún no se ha evaluado",
     "noOutcomesInstructor": "Para comenzar a realizar el seguimiento del logro de {outcome, select, competencies {competencias} expectations {expectativas} objectives {objetivos} outcomes {resultados} standards {estándares} other {estándares}}, debe alinear el curso {outcome, select, competencies {competencias} expectations {expectativas} objectives {objetivos} outcomes {resultados} standards {estándares} other {estándares}} con las actividades evaluadas.",
     "noOutcomesStudent": "{outcome, select, competencies {competencias} expectations {expectativas} objectives {objetivos} outcomes {resultados} standards {estándares} other {estándares}} no se han evaluado.",
@@ -20,10 +20,10 @@
     "noScaleStudent": "No se ha establecido ninguna escala para medir el logro de {outcome, select, competencies {competencias} expectations {expectativas} objectives {objetivos} outcomes {resultados} standards {estándares} other {estándares}}.",
     "noSearchResults": "No results found for \"{searchTerm}\"",
     "notAssessed": "Sin evaluación",
+    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "outcomesListDescription": "{outcome, select, competencies {Competencies} expectations {Expectations} objectives {Objectives} outcomes {Outcomes} standards {Standards} other {Standards}} List",
     "outcomesListLoading": "Loading",
     "outcomesListLoadingComplete": "Loading complete",
-    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "searchCleared": "Search results cleared",
     "searchHint": "Search...",
     "searchLabel": "Search",
