--- a/lang/fr.json
+++ b/lang/fr.json
@@ -10,9 +10,9 @@
     "headingLoa": "Niveau de réalisation",
     "miniTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Tentative} other {Tentatives}} {attemptNames}",
     "miniTrendScreenReaderText": "Évalué {numAssessed} {numAssessed, plural, =1 {fois} other {fois}}: {levelNames}",
-    "nodeAriaText": "Level {level}, group {state}, {content}, {position} of {count}.",
-    "nodeAriaTextLeaf": "Level {level}, {content}, {position} of {count}.",
-    "nodeLoadingAriaText": "Level {level}, loading, {position} of {count}.",
+    "nodeAriaTextGroup": "Group {state}",
+    "nodeAriaTextLevel": "Level {level}",
+    "nodeAriaTextPosition": "{position} of {count}",
     "noEvidence": "Ce/Cette {outcome, select, competencies {compétence} expectations {attente} objectives {objectif} outcomes {résultat} standards {norme} other {norme}} n’a pas encore été évalué(e)",
     "noOutcomesInstructor": "Pour commencer le suivi de la réalisation de {outcome, select, competencies {compétences} expectations {attentes} objectives {objectifs} outcomes {résultats} standards {normes} other {normes}}, aligner les {outcome, select, competencies {compétences} expectations {attentes} objectives {objectifs} outcomes {résultats} standards {normes} other {normes}} du cours sur les activités évaluées.",
     "noOutcomesStudent": "Aucun(e) de ces {outcome, select, competencies {compétences} expectations {attentes} objectives {objectifs} outcomes {résultats} standards {normes} other {normes}} n’a été évalué(e).",
@@ -20,10 +20,10 @@
     "noScaleStudent": "Aucune échelle n’a été établie pour mesurer l’atteinte des {outcome, select, competencies {compétences} expectations {attentes} objectives {objectifs} outcomes {résultats} standards {normes} other {normes}}.",
     "noSearchResults": "No results found for \"{searchTerm}\"",
     "notAssessed": "Non évalué",
+    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "outcomesListDescription": "{outcome, select, competencies {Competencies} expectations {Expectations} objectives {Objectives} outcomes {Outcomes} standards {Standards} other {Standards}} List",
     "outcomesListLoading": "Loading",
     "outcomesListLoadingComplete": "Loading complete",
-    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "searchCleared": "Search results cleared",
     "searchHint": "Search...",
     "searchLabel": "Search",
