--- a/lang/fr.json
+++ b/lang/fr.json
@@ -10,9 +10,9 @@
     "headingLoa": "Niveau de réalisation",
     "miniTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Tentative} other {Tentatives}} {attemptNames}",
     "miniTrendScreenReaderText": "Évalué {numAssessed} {numAssessed, plural, =1 {fois} other {fois}}: {levelNames}",
-    "nodeAriaTextGroup": "Group {state}",
-    "nodeAriaTextLevel": "Level {level}",
-    "nodeAriaTextPosition": "{position} of {count}",
+    "nodeAriaTextGroup": "Groupe {state}",
+    "nodeAriaTextLevel": "Niveau {level}",
+    "nodeAriaTextPosition": "{position} sur {count}",
     "noEvidence": "Ce/Cette {outcome, select, competencies {compétence} expectations {attente} objectives {objectif} outcomes {résultat} standards {norme} other {norme}} n’a pas encore été évalué(e)",
     "noOutcomesInstructor": "Pour commencer le suivi de la réalisation de {outcome, select, competencies {compétences} expectations {attentes} objectives {objectifs} outcomes {résultats} standards {normes} other {normes}}, aligner les {outcome, select, competencies {compétences} expectations {attentes} objectives {objectifs} outcomes {résultats} standards {normes} other {normes}} du cours sur les activités évaluées.",
     "noOutcomesStudent": "Aucun(e) de ces {outcome, select, competencies {compétences} expectations {attentes} objectives {objectifs} outcomes {résultats} standards {normes} other {normes}} n’a été évalué(e).",
