--- a/lang/nl.json
+++ b/lang/nl.json
@@ -15,12 +15,12 @@
    "noOutcomesStudent" : "Geen {outcome, select, competencies {Competenties} expectations {Verwachtingen} objectives {Doelstellingen} outcomes {Resultaten} standards {Standaarden} other {Standaarden}} zijn geëvalueerd.",
    "noScaleInstructor" : "Als u wilt kijken hoe ver een cursist is bij het bereiken van {outcome, select, competencies {Competenties} expectations {Verwachtingen} objectives {Doelstellingen} outcomes {Resultaten} standards {Standaarden} other {Standaarden}}, maakt en selecteert u een voltooiingsschaal.",
    "noScaleStudent" : "Er is geen schaal ingesteld om de resultaten van {outcome, select, competencies {Competenties} expectations {Verwachtingen} objectives {Doelstellingen} outcomes {Resultaten} standards {Standaarden} other {Standaarden}} te meten.",
-   "noSearchResults" : "Geen resultaten gevonden voor '{searchTerm}'",
+   "noSearchResults" : "Geen resultaten gevonden voor \"{searchTerm}\"",
    "nodeAriaTextGroup" : "Group {state}",
    "nodeAriaTextLevel" : "Level {level}",
    "nodeAriaTextPosition" : "{position} of {count}",
    "notAssessed" : "Niet geëvalueerd",
-   "numSearchResults" : "{numResults} zoeken {numResults, plural, =1 {result} other {results}} voor '{searchTerm}'",
+   "numSearchResults" : "{numResults} zoeken {numResults, plural, =1 {result} other {results}} voor \"{searchTerm}\"",
    "outcomesListDescription" : "Lijst met {outcome, select, competencies {competenties} expectations {verwachtingen} objectives {doelstellingen} outcomes {uitkomsten} standards {standaarden} other {standaarden}}",
    "outcomesListLoading" : "Bezig met laden",
    "outcomesListLoadingComplete" : "Laden voltooid",
