--- a/lang/da.json
+++ b/lang/da.json
@@ -3,30 +3,30 @@
    "a11yExpanded" : "udvidet",
    "bigTrendAttemptsScreenReaderString" : "{numAttempts, plural, =1 {Forsøg {attemptNames}} other {Forsøg {attemptNames} og {lastAttemptName}}}",
    "bigTrendAttemptsTooltipString" : "{numAttempts, plural, =1 {Forsøg} other {Forsøg}} {attemptNames}",
-   "close" : "Close",
-   "evidence" : "Evidence",
+   "close" : "Luk",
+   "evidence" : "Dokumentation",
    "headingDate" : "Dato",
    "headingEvidence" : "Dokumentationsnavn",
-   "headingLoa" : "Level of Achievement",
+   "headingLoa" : "Gennemførelsesniveau",
    "miniTrendAttemptsTooltipString" : "{numAttempts, plural, =1 {Forsøg} other {Forsøg}} {attemptNames}",
    "miniTrendScreenReaderText" : "Vurderet {numAssessed} {numAssessed, plural, =1 {gang} other {gange}}: {levelNames}",
-   "noEvidence" : "This {outcome, select, competencies {competency} expectations {expectation} objectives {objective} outcomes {outcome} standards {standard} other {standard}} has not yet been assessed",
-   "noOutcomesInstructor" : "To start tracking achievement of {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}}, align course {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}} to assessed activities.",
-   "noOutcomesStudent" : "No {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}} have been evaluated.",
-   "noScaleInstructor" : "To view learner progress towards achieving this {outcome, select, competencies {competency} expectations {expectation} objectives {objective} outcomes {outcome} standards {standard} other {standard}}, create and select an achievement scale.",
-   "noScaleStudent" : "No scale has been set to measure achievement of {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}}.",
+   "noEvidence" : "Dette {outcome, select, competencies {kompetence} expectations {forventning} objectives {mål} outcomes {resultat} standards {standard} other {standard}} er ikke blevet vurderet endnu",
+   "noOutcomesInstructor" : "For at begynde at registrere gennemførelse for {outcome, select, competencies {kompetencer} expectations {forventninger} objectives {mål} outcomes {resultater} standards {standarder} other {standarder}}, skal du justere kursers {outcome, select, competencies {kompetencer} expectations {forventninger} objectives {mål} outcomes {resultater} standards {standarder} other {standarder}} efter vurderede aktiviteter.",
+   "noOutcomesStudent" : "Ingen {outcome, select, competencies {kompetencer} expectations {forventninger} objectives {mål} outcomes {resultater} standards {standarder} other {standarder}} er blevet evalueret.",
+   "noScaleInstructor" : "For at se elevens fremskridt mod gennemførelsen af {outcome, select, competencies {kompetence} expectations {forventning} objectives {mål} outcomes {resultater} standards {standard} other {standard}}, skal du oprette og vælge en gennemførelsesskala.",
+   "noScaleStudent" : "Ingen skala er blevet indstillet til at måle gennemførelsen af {outcome, select, competencies {kompetencer} expectations {forventninger} objectives {mål} outcomes {resultater} standards {standarder} other {standarder}}.",
    "noSearchResults" : "Ingen resultater fundet for \"{searchTerm}\"",
    "nodeAriaTextGroup" : "Group {state}",
    "nodeAriaTextLevel" : "Level {level}",
    "nodeAriaTextPosition" : "{position} of {count}",
-   "notAssessed" : "Not assessed",
-   "numSearchResults" : "{numResults} søg {numResults, plural, =1 {resultat} other {resultater}} for \"{searchTerm}\"",
-   "outcomesListDescription" : "{outcome, select, competencies {Kompetencer} expectations {Forventninger} objectives {Mål} outcomes {Resultater} standards {Standarder} other {Standarder}} liste",
+   "notAssessed" : "Ikke vurderet",
+   "numSearchResults" : "{numResults} søg {numResults, plural, =1 {result} andre {results}} for \"{searchTerm}\"",
+   "outcomesListDescription" : "{outcome, select, competencies {Competencies} expectations {Expectations} objectives {Objectives} outcomes {Outcomes} standards {Standards} other {Standards}} liste",
    "outcomesListLoading" : "Indlæser",
    "outcomesListLoadingComplete" : "Indlæsning fuldført",
    "searchCleared" : "Søgeresultater ryddet",
    "searchHint" : "Søg...",
    "searchLabel" : "Søg",
-   "trend" : "Trend",
-   "untitled" : "Untitled"
+   "trend" : "Tendens",
+   "untitled" : "Unavngivet"
 }
