Apply suggestions from code review
Fix incorrect translations

--- a/lang/da.json
+++ b/lang/da.json
@@ -20,8 +20,8 @@
    "nodeAriaTextLevel" : "Level {level}",
    "nodeAriaTextPosition" : "{position} of {count}",
    "notAssessed" : "Ikke vurderet",
-   "numSearchResults" : "{numResults} søg {numResults, plural, =1 {result} andre {results}} for \"{searchTerm}\"",
-   "outcomesListDescription" : "{outcome, select, competencies {Competencies} expectations {Expectations} objectives {Objectives} outcomes {Outcomes} standards {Standards} other {Standards}} liste",
+   "numSearchResults" : "{numResults} søg {numResults, plural, =1 {resultat} other {resultater}} for \"{searchTerm}\"",
+   "outcomesListDescription" : "{outcome, select, competencies {Kompetencer} expectations {Forventninger} objectives {Mål} outcomes {Resultater} standards {Standarder} other {Standarder}} liste",
    "outcomesListLoading" : "Indlæser",
    "outcomesListLoadingComplete" : "Indlæsning fuldført",
    "searchCleared" : "Søgeresultater ryddet",
