--- a/lang/ar.json
+++ b/lang/ar.json
@@ -16,9 +16,9 @@
    "noScaleInstructor" : "لعرض تقدم المتعلّم لتحقيق {outcome, select, competencies {الكفاءة} expectations {التوقع} objectives {الهدف} outcomes {النتيجة} standards {المعيار} other {المعيار}} هذا، يجب إنشاء مقياس تحصيل وتحديده.",
    "noScaleStudent" : "لم يتم تعيين أي مقياس لقياس تحقيق {outcome, select, competencies {الكفاءات} expectations {التوقعات} objectives {الأهداف} outcomes {النتائج} standards {المعايير} other {المعايير}}.",
    "noSearchResults" : "لم يتم العثور على أي نتائج للمصطلح \"{searchTerm}\"",
-   "nodeAriaTextGroup" : "Group {state}",
-   "nodeAriaTextLevel" : "Level {level}",
-   "nodeAriaTextPosition" : "{position} of {count}",
+   "nodeAriaTextGroup" : "المجموعة {state}",
+   "nodeAriaTextLevel" : "المستوى {level}",
+   "nodeAriaTextPosition" : "{position} من أصل {count}",
    "notAssessed" : "لم يتم التقييم",
    "numSearchResults" : "{numResults} من عمليات البحث {numResults, plural, =1 {نتيجة} other {نتائج}} للمصطلح \"{searchTerm}\"",
    "outcomesListDescription" : "قائمة {outcome, select, competencies {الكفاءات} expectations {التوقعات} objectives {الأهداف} outcomes {النتائج} standards {المعايير} other {المعايير}}",
