--- a/lang/da.json
+++ b/lang/da.json
@@ -16,9 +16,9 @@
    "noScaleInstructor" : "For at se elevens fremskridt mod gennemførelsen af {outcome, select, competencies {kompetence} expectations {forventning} objectives {mål} outcomes {resultater} standards {standard} other {standard}}, skal du oprette og vælge en gennemførelsesskala.",
    "noScaleStudent" : "Ingen skala er blevet indstillet til at måle gennemførelsen af {outcome, select, competencies {kompetencer} expectations {forventninger} objectives {mål} outcomes {resultater} standards {standarder} other {standarder}}.",
    "noSearchResults" : "Ingen resultater fundet for \"{searchTerm}\"",
-   "nodeAriaTextGroup" : "Group {state}",
-   "nodeAriaTextLevel" : "Level {level}",
-   "nodeAriaTextPosition" : "{position} of {count}",
+   "nodeAriaTextGroup" : "Gruppe {state}",
+   "nodeAriaTextLevel" : "Niveau {level}",
+   "nodeAriaTextPosition" : "{position} ud af {count}",
    "notAssessed" : "Ikke vurderet",
    "numSearchResults" : "{numResults} søg {numResults, plural, =1 {resultat} other {resultater}} for \"{searchTerm}\"",
    "outcomesListDescription" : "{outcome, select, competencies {Kompetencer} expectations {Forventninger} objectives {Mål} outcomes {Resultater} standards {Standarder} other {Standarder}} liste",
