--- a/lang/ja.json
+++ b/lang/ja.json
@@ -16,9 +16,9 @@
    "noScaleInstructor" : "この{outcome, select, competencies {コンピテンシ} expectations {期待} objectives {目的} outcomes {結果} standards {標準} other {標準}}の受講者の達成度を表示するには、達成スケールを作成して選択します。",
    "noScaleStudent" : "{outcome, select, competencies {コンピテンシ} expectations {期待} objectives {目的} outcomes {結果} standards {標準} other {標準}}の達成を測定するためのスケールが設定されていません。",
    "noSearchResults" : "「{searchTerm}」の検索結果なし",
-   "nodeAriaTextGroup" : "Group {state}",
-   "nodeAriaTextLevel" : "Level {level}",
-   "nodeAriaTextPosition" : "{position} of {count}",
+   "nodeAriaTextGroup" : "グループ {state}",
+   "nodeAriaTextLevel" : "レベル {level}",
+   "nodeAriaTextPosition" : "{position}/{count}",
    "notAssessed" : "未評価",
    "numSearchResults" : "「{searchTerm}」の検索{numResults, plural, =1 {結果} other {結果}} {numResults} 件",
    "outcomesListDescription" : "{outcome, select, competencies {コンピテンシ} expectations {期待} objectives {目的} outcomes {結果} standards {標準} other {標準}}リスト",
