--- a/lang/pt.json
+++ b/lang/pt.json
@@ -16,9 +16,9 @@
    "noScaleInstructor" : "Para ver o progresso do aluno em relação à realização deste(a) {outcome, select, competencies {competência} expectations {expectativa} objectives {objetivo} outcomes {resultado} standards {padrão} other {padrão}}, crie e selecione uma escala de realização.",
    "noScaleStudent" : "Nenhuma escala foi definida para medir a realização de {outcome, select, competencies {competências} expectations {expectativas} objectives {objetivos} outcomes {resultados} standards {padrões} other {padrões}}.",
    "noSearchResults" : "Nenhum resultado encontrado para \"{searchTerm}\"",
-   "nodeAriaTextGroup" : "Group {state}",
-   "nodeAriaTextLevel" : "Level {level}",
-   "nodeAriaTextPosition" : "{position} of {count}",
+   "nodeAriaTextGroup" : "Grupo {state}",
+   "nodeAriaTextLevel" : "Nível {level}",
+   "nodeAriaTextPosition" : "{position} de {count}",
    "notAssessed" : "Não avaliado",
    "numSearchResults" : "{numResults} {numResults, plural, =1 {resultado} other {resultados}} de pesquisa para \"{searchTerm}\"",
    "outcomesListDescription" : "Lista de {outcome, select, competencies {Competências} expectations {Expectativas} objectives {Objetivos} outcomes {Resultados} standards {Padrões} other {Padrões}}",
