--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -16,9 +16,9 @@
    "noScaleInstructor" : "若要檢視學習者於此 {outcome, select, competencies {能力} expectations {預期} objectives {目標} outcomes {成果} standards {標準} other {標準}} 的達成進度，請建立並選取達成衡量等級。",
    "noScaleStudent" : "尚未設定衡量 {outcome, select, competencies {能力} expectations {預期} objectives {目標} outcomes {成果} standards {標準} other {標準}} 達成的等級。",
    "noSearchResults" : "找不到「{searchTerm}」的搜尋結果",
-   "nodeAriaTextGroup" : "Group {state}",
-   "nodeAriaTextLevel" : "Level {level}",
-   "nodeAriaTextPosition" : "{position} of {count}",
+   "nodeAriaTextGroup" : "群組{state}",
+   "nodeAriaTextLevel" : "層級 {level}",
+   "nodeAriaTextPosition" : "{count} 的 {position}",
    "notAssessed" : "未評量",
    "numSearchResults" : "{numResults} 筆「{searchTerm}」的搜尋{numResults, plural, =1 {結果} other {結果}}",
    "outcomesListDescription" : "{outcomes, select, competencies {能力} expectations {預期} objectives {目標} outcomes {成果} standards {標準} other {標準}}清單",
