--- a/lang/es.json
+++ b/lang/es.json
@@ -16,9 +16,9 @@
    "noScaleInstructor" : "Con el fin de ver el progreso del estudiante para lograr este {outcome, select, competencies {competencia} expectations {expectativa} objectives {objetivo} outcomes {resultado} standards {estándar} other {estándar}}, cree y seleccione una escala de logros.",
    "noScaleStudent" : "No se ha establecido ninguna escala para medir el logro de {outcome, select, competencies {competencias} expectations {expectativas} objectives {objetivos} outcomes {resultados} standards {estándares} other {estándares}}.",
    "noSearchResults" : "No se encontraron resultados para “{searchTerm}”",
-   "nodeAriaTextGroup" : "Group {state}",
-   "nodeAriaTextLevel" : "Level {level}",
-   "nodeAriaTextPosition" : "{position} of {count}",
+   "nodeAriaTextGroup" : "Grupo {state}",
+   "nodeAriaTextLevel" : "Nivel {level}",
+   "nodeAriaTextPosition" : "{position} de {count}",
    "notAssessed" : "Sin evaluación",
    "numSearchResults" : "{numResults} búsqueda {numResults, plural, =1 {resultado} other {resultados}} para “{searchTerm}”",
    "outcomesListDescription" : "Lista de {outcome, select, competencies {Competencias} expectations {Expectativas} objectives {Objetivos} outcomes {Resultados} standards {Estándares} other {Estándares}}",
