--- a/lang/tr.json
+++ b/lang/tr.json
@@ -16,9 +16,9 @@
    "noScaleInstructor" : "Şunlara ulaşma konusundaki katılımcı ilerlemesini görmek için, bir başarı ölçütü oluşturun ve seçin: {outcome, select, competencies {yeterlik} expectations {beklenti} objectives {hedef} outcomes {kazanım} standards {standart} other {standart}}.",
    "noScaleStudent" : "{outcome, select, competencies {yeterlikler} expectations {beklentiler} objectives {hedefler} outcomes {kazanımlar} standards {standartlar} other {standartlar}} başarısı için bir ölçüt belirlenmedi.",
    "noSearchResults" : "\"{searchTerm}\" için hiçbir sonuç bulunamadı",
-   "nodeAriaTextGroup" : "Group {state}",
-   "nodeAriaTextLevel" : "Level {level}",
-   "nodeAriaTextPosition" : "{position} of {count}",
+   "nodeAriaTextGroup" : "Grup {state}",
+   "nodeAriaTextLevel" : "Seviye {level}",
+   "nodeAriaTextPosition" : "{position}/{count}",
    "notAssessed" : "Değerlendirilmemiş",
    "numSearchResults" : "\"{searchTerm}\" için {numResults} arama {numResults, plural, =1 {sonuç} other {sonuç}}",
    "outcomesListDescription" : "{outcome, select, competencies {Yeterlikler} expectations {Beklentiler} objectives {Hedefler} outcomes {Kazanımlar} standards {Standartlar} other {Standartlar}} Listesi",
