--- a/lang/ko.json
+++ b/lang/ko.json
@@ -21,7 +21,7 @@
    "nodeAriaTextPosition" : "{count}의 {position}",
    "notAssessed" : "평가되지 않음",
    "numSearchResults" : "\"{searchTerm}\"에 대한 {numResults} 검색 {numResults, plural, =1 {result} other {results}}",
-   "outcomesListDescription" : "{결과, 선택, 역량 {Competencies} 기대 {Expectations} 목표 {Objectives} 결과 {Outcomes} 표준 {Standards} 기타 {Standards}} 목록",
+   "outcomesListDescription": "{outcome, select, competencies {Competencies} expectations {Expectations} objectives {Objectives} outcomes {Outcomes} standards {Standards} other {Standards}} List",
    "outcomesListLoading" : "로드 중...",
    "outcomesListLoadingComplete" : "로드 완료",
    "searchCleared" : "검색 결과가 삭제되었습니다.",
