--- a/lang/zh.json
+++ b/lang/zh.json
@@ -21,7 +21,7 @@
    "nodeAriaTextPosition" : "{position}（共 {count} 个）",
    "notAssessed" : "未评估",
    "numSearchResults" : "搜索“{searchTerm}”找到 {numResults} 个 {numResults, plural, =1 {结果} other {结果}}",
-   "outcomesListDescription" : "{outcomes, select, competencies {能力} expectations {预期} objectives {目标} outcomes {成果} standards {标准} other {标准}} 列表",
+   "outcomesListDescription" : "{outcome, select, competencies {能力} expectations {预期} objectives {目标} outcomes {成果} standards {标准} other {标准}} 列表",
    "outcomesListLoading" : "正在加载",
    "outcomesListLoadingComplete" : "加载完成",
    "searchCleared" : "搜索结果已清除",
