--- a/lang/ko.json
+++ b/lang/ko.json
@@ -1,7 +1,7 @@
 {
    "a11yCollapsed" : "축소됨",
    "a11yExpanded" : "확장됨",
-   "bigTrendAttemptsScreenReaderString" : "{numAttempts, plural, =1 {Attempt {attemptNames}} 기타 {Attempts {attemptNames} 및 {lastAttemptName}}}",
+   "bigTrendAttemptsScreenReaderString" : "{numAttempts, plural, =1 {Attempt {attemptNames}} other {Attempts {attemptNames} 및 {lastAttemptName}}}",
    "bigTrendAttemptsTooltipString" : "{numAttempts, plural, =1 {Attempt {attemptNames}} other {Attempts {attemptNames} 및 {lastAttemptName}}}",
    "close" : "닫기",
    "evidence" : "근거",
