--- a/lang/ko.json
+++ b/lang/ko.json
@@ -13,7 +13,7 @@
    "noEvidence" : "이 {outcome, select, competencies {역량} expectations {기대} objectives {목표} outcomes {결과} standards {표준} other {표준}} 은(는) 아직 평가되지 않았습니다.",
    "noOutcomesInstructor" : "{outcome, select, competencies {역량} expectations {기대} objectives {목표} outcomes {결과} standards {표준} other {표준}}의 추적 도전과제를 시작하려면, 과정 {outcome, select, competencies {역량} expectations {기대} objectives {목표} outcomes {결과} standards {표준} other {표준}}을(를) 평가된 활동에 정렬합니다.",
    "noOutcomesStudent" : "어떤 {outcome, select, competencies {역량} expectations {기대} objectives {목표} outcomes {결과} standards {표준} other {표준}}도 평가되지 않았습니다.",
-   "noScaleInstructor" : "이 {결과, 선택, 역량 {competency} 기대 {expectation} 목표 {objective} 결과 {outcome} 표준 {standard} 기타 {standard}}을(를) 성취하기 위해 학습자 진행 상황을 보려면, 성취 척도를 생성하고 선택합니다.",
+   "noScaleInstructor" : "이{outcome, select, competencies {역량} expectations {기대} objectives {목표} outcomes {결과} standards {표준} other {표준}}을(를) 성취하기 위해 학습자 진행 상황을 보려면, 성취 척도를 생성하고 선택합니다.",
    "noScaleStudent" : "{outcome, select, competencies {역량} expectations {기대} objectives {목표} outcomes {결과} standards {표준} other {표준}}에 대한 성취를 측정하기 위해 어떠한 척도도 설정되지 않았습니다.",
    "noSearchResults" : "“{searchTerm}”에 대한 검색 결과가 없습니다.",
    "nodeAriaTextGroup" : "{state} 그룹",
